--- a/html/styles.css
+++ b/html/styles.css
@@ -1,4 +1,52 @@
 :root {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background-color: hsl(0, 1.6%, 12%);
+}
+
+.movie-list {
+  list-style: none;
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+  gap: 1rem;
+}
+
+.movie-list h3 {
+  margin: 0;
+}
+
+.movie-list li {
+  overflow: hidden;
+  display: block;
+  aspect-ratio: 16 / 9;
+  display: grid;
+  border-radius: 5px;
+}
+
+.movie-list li figure.hidden {
+  opacity: 0;
+}
+
+.movie-list figure {
+  opacity: 1;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  width: 100%;
+  margin: 0;
+  transition: all 2000ms;
+}
+
+.movie-list img {
+  display: block;
+  width: 100%;
+  object-fit: cover;
+  overflow: hidden;
+}
+
+.movie-list li div {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  width: 100%;
+  background-color: hsl(0, 1.3%, 15.5%);
 }
