--- a/html/styles.css
+++ b/html/styles.css
@@ -2,6 +2,7 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   background-color: hsl(0, 1.6%, 12%);
+  color: white;
 }
 
 .movie-list {
