--- a/html/styles.scss
+++ b/html/styles.scss
@@ -1,8 +1,11 @@
 :root {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: hsl(0, 1.6%, 12%);
+  background-color: hsl(0, 1.3%, 8%);
   color: white;
+  --gold: hsl(42, 53%, 82%);
+  --gold-2: hsl(42, 53%, 68%);
+  --surface-1: hsl(42, 53%, 72%);
 }
 
 html,
@@ -12,53 +15,82 @@ body,
   height: 100%;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 .movie-list {
   list-style: none;
   padding: 0;
   display: grid;
   width: 100%;
   /* background: green; */
-  grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
   gap: 1rem;
+  color: var(--gold-2);
+
+  & h3 {
+    margin: 0;
+    color: var(--gold);
+    font-family: "New York Extra Large";
+    font-weight: 900;
+    font-style: italic;
+    font-size: 1.414rem;
+  }
+
+  & li {
+    overflow: hidden;
+    display: block;
+    aspect-ratio: 16 / 9;
+    aspect-ratio: 38 / 50;
+    display: grid;
+    border-radius: 8px;
+
+    & figure {
+      opacity: 1;
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      width: 100%;
+      margin: 0;
+      transition: all 2000ms;
+    }
+
+    & figure.hidden {
+      opacity: 0;
+    }
+
+    & img {
+      display: block;
+      width: 100%;
+    }
+
+    & > div {
+      display: grid;
+      grid-template-columns: auto 1fr;
+      gap: 0.4rem;
+
+      overflow: visible;
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      /* Hack to make the text not fade with image fade-in */
+      z-index: 1;
+      background-color: hsla(0, 25%, 2%, 40%);
+      backdrop-filter: blur(8px);
+      padding: 1rem;
+      align-self: flex-end;
+      height: max-content;
+
+      & :first-child {
+        grid-column: 1 / -1;
+      }
+    }
+  }
 }
 
-.movie-list h3 {
-  margin: 0;
-}
-
-.movie-list li {
-  overflow: hidden;
-  display: block;
-  aspect-ratio: 16 / 9;
-  display: grid;
-  border-radius: 8px;
-}
-
-.movie-list li figure.hidden {
-  opacity: 0;
-}
-
-.movie-list figure {
-  opacity: 1;
-  grid-column: 1 / -1;
-  grid-row: 1 / -1;
-  width: 100%;
-  margin: 0;
-  transition: all 2000ms;
-}
-
-.movie-list img {
-  display: block;
-  width: 100%;
-  object-fit: cover;
-  overflow: hidden;
-}
-
-.movie-list li div {
-  grid-column: 1 / -1;
-  grid-row: 1 / -1;
-  width: 100%;
-  background-color: hsl(0, 1.3%, 15.5%);
+.sentinel {
+  background: transparent;
+  content: "";
+  height: 2rem;
 }
 
 .drag-ul {
@@ -89,14 +121,10 @@ body,
 .drag-ul .item-contents {
   display: inline-grid;
   grid-auto-flow: column;
-  /* grid-template-columns: 0.6rem auto; */
   justify-items: center;
   align-content: center;
   gap: 0.4rem;
 }
-/* .drag-ul .neutral {
-  opacity: 0.5;
-} */
 
 .search {
   display: flex;
@@ -133,6 +161,7 @@ main > section:first-of-type > div {
   flex-flow: column;
   gap: 1.2rem;
 }
+
 /* input[type="search"] {
   width: 300px;
   border: 1px solid whitesmoke;
@@ -150,7 +179,7 @@ main > section:first-of-type > div {
 input[type="search"] {
   width: 300px;
   border: 1px solid whitesmoke;
-  background-color: hsl(0, 1.6%, 12%);
+  background-color: hsl(0, 1.3%, 12%);
   border-radius: 4px;
   color: white;
   height: 30px;
